tests/NormalTests/paczka1/fuzzy1/14947841.err
Error in line 1: fujg A254 72,6
Error in line 5: S753 A254 88,8
Error in line 18: QAYNfI S128 62,3
Error in line 20: QAYNfI S753 8,2
Error in line 25: QAYNfI A254 69,2
Error in line 32: QAYNfI S753 93,3
